# mcp-server-toolkit

./: .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml
client/: cli.py
docs/: index.md
examples/: create_db.py  demo.py  sample.db
search/: search_index.json
src/mcp_toolkit/: __init__.py  config.py  server.py
src/mcp_toolkit/tools/: database.py  filesystem.py  system.py  websearch.py
tests/: test_database.py  test_filesystem.py  test_system.py  test_websearch.py
