[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-toolkit"
version = "0.1.0"
description = "A production-ready MCP server exposing filesystem, web search, SQLite, and system tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "psutil>=5.9.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]

[project.scripts]
mcp-toolkit = "mcp_toolkit.server:main"
mcp-client = "client.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_toolkit", "client"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
